# image_viewer-cpp

./: .gitignore  CMakeLists.txt  main.cpp  main.qml
include/: backend.h  buttonHandler.h
src/: backend.cpp  buttonHandler.cpp  main.cpp  main.qml  main.rect.qml
